[package]
name = "lobby-bridge"
version = "0.1.0"
authors = ["Askaholic"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.8"
futures-util = { version = "0.3", features = ["sink"] }
lazy_static = "1.4.0"
log = "0.4"
tokio-tungstenite = "0.14"
tungstenite = "0.13"

[dependencies.tokio]
version = "1"
features = ["rt", "rt-multi-thread", "net", "macros", "io-util"]
